istio/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-two
  labels:
    app: httpbin-two
    service: httpbin-two
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: httpbin-two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-two
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-two
        version: v1
    spec:
      serviceAccountName: httpbin-two
      containers:
        - image: asia-southeast2-docker.pkg.dev/koinworks-data-staging/development-container/mlflow
          imagePullPolicy: Always
          name: httpbin-two
          ports:
            - containerPort: 5000
