istio/mlflow-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 5000
        name: mlflow-tracking
        protocol: HTTP
      hosts:
        - '*'
